@@ -48,7 +48,7 @@
   <a href="{url:clansphere_about}" class="dark">Scriptinfo</a>
  </div>
 
-<div id="content">{func:show}</div>
+{func:show}
 
 <div id="nav-right">
   <div class="navhead">LOGIN</div>
