@@ -54,7 +54,7 @@
   <a href="{url:clansphere_about}" class="dark">Scriptinfo</a>
  </div> <!-- Nav-left End -->
 
-<div id="content">{func:show}</div>
+{func:show}
 
 <div id="nav-right">
   <div class="navhead">LOGIN</div>
