@@ -15,7 +15,7 @@
   <div>This page is down for maintenance</div>
  </div>
 
-<div id="content" style="width: 100%">{func:show}</div>
+<div style="width: 100%">{func:show}</div>
 
 </body>
 </html>
