@@ -9,8 +9,6 @@
 <img src="img/clansphere.png" alt="Clansphere" /><br />
 <div id="slogan">Professional clan care starts here</div>
 <br />
-<div id="content">
-  {func:show}
- </div>
+{func:show}
 </body>
 </html>
