@@ -14,11 +14,9 @@
 <div id="navigation">
   {install:navi}
  </div>
-<div id="content">
-  <div id="headline">{install:headline}</div>
-  <hr /><br />
-  {func:show}
- </div>
+<div id="headline">{install:headline}</div>
+<hr /><br />
+{func:show}
 
 </body>
 </html>
